--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,12 @@ jobs:
           name: "Deploy Web App to Azure"
           command: |
             az webapp deployment source config-local-git --resource-group DemoApp --name azure-react-tutorial
+            cd ~/project/build/
+            git init
+            git add .
+            git commit -m "New update"
+            git remote add azure https://$GIT_USERNAME:$GIT_PASSWORD@azure-react-tutorial.scm.azurewebsites.net/azure-react-tutorial.git
+            git push azure master --force
 workflows:
   build-and-deploy:
     jobs:
